<resources>
    <string name="app_name">TravelingJurnalApp</string>
    <string name="trip_name">Trip Name</string>
    <string name="name">Name</string>
    <string name="trip_destination">Trip Destination</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip Type</string>
    <string name="city_break">City Break</string>
    <string name="seaside">Seaside</string>
    <string name="mountains">Mountains</string>
    <string name="price">Price €</string>
    <string name="timeframe">Timeframe</string>
    <string name="start_date">start date</string>
    <string name="end_date">end date</string>
    <string name="rate_your_trip">Rate your trip</string>
    <string name="select_photo">Select photo</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="save_trip">Save trip</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in!</string>
    <string name="trip_error">Trip error</string>
    <string name="destination_error">Destination error</string>
    <string name= "select_date">Select date pls</string>
    <string name="chose_string">Chose</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorites</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_contactus">Contact Us</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="favorites">Favorites</string>
    <string name="help">Help</string>
    <string name="poligirls">PoliGirls</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>